[package]
name = "employees"
version = "0.1.0"
authors = ["Aidin Gharibnavaz <aidin@aidinhut.com>"]
description = "Game in which softwares have to work for Baga company."
license = "GPLv3"
# Preventing accedental publish to crates.io
publish = false

[dependencies]
emulator = { path = "../emulator/" }
log = "0.4"
simplelog = "0.7"
rand = "0.7"